add config database

--- a/microservice-issue/src/main/resources/application.yml
+++ b/microservice-issue/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
     name: microservice-issue
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/issue_book
-    username: root
-    password: dabel
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASS}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
   config:
