--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,55 @@
 version: '3.8'
 
 services:
-  gateway:
-    image: micorservice-gateway:latest
-    container_name: gateway
-    ports:
-      - "8081:8081"
-    environment:
-      - SERVER_EUREKA=localhost:8761
-    depends_on:
-      - eureka-server
-    networks:
-      - microservices-network
-
   eureka-server:
-    image: msvc-eureka:latest
+    build:
+      context: ./microservice-eureka
+      dockerfile: Dockerfile
     container_name: eureka-server
     ports:
       - "8761:8761"
+    networks:
+      - microservices-network
+
+  gateway:
+    build:
+      context: ./micorservice-gateway
+      dockerfile: Dockerfile
+    container_name: gateway
+    ports:
+      - "8081:8081"
+    depends_on:
+      - eureka-server
+    environment:
+      - EUREKA_SERVER_URL=eureka-server:8761
+    networks:
+      - microservices-network
+
+  library:
+    build:
+      context: ./microservice-library
+      dockerfile: Dockerfile
+    container_name: library
+    ports:
+      - "8083:8083"
+    depends_on:
+      - eureka-server
+    environment:
+      - EUREKA_SERVER_URL=eureka-server:8761
+    networks:
+      - microservices-network
+
+  issue:
+    build:
+      context: ./microservice-issue
+      dockerfile: Dockerfile
+    container_name: issue
+    ports:
+      - "8082:8082"
+    depends_on:
+      - eureka-server
+    environment:
+      - EUREKA_SERVER_URL=eureka-server:8761
     networks:
       - microservices-network
 
