--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - eureka-server
     environment:
-      - EUREKA_SERVER_URL=eureka-server:8761
+      - EUREKA_SERVER_URL=http://eureka-server:8761/eureka
     networks:
       - microservices-network
 
@@ -35,7 +35,7 @@ services:
     depends_on:
       - eureka-server
     environment:
-      - EUREKA_SERVER_URL=eureka-server:8761
+      - EUREKA_SERVER_URL=http://eureka-server:8761/eureka
     networks:
       - microservices-network
 
@@ -49,7 +49,7 @@ services:
     depends_on:
       - eureka-server
     environment:
-      - EUREKA_SERVER_URL=eureka-server:8761
+      - EUREKA_SERVER_URL=http://eureka-server:8761/eureka
     networks:
       - microservices-network
 
